Fix formatting on narrow screens

--- a/styles.css
+++ b/styles.css
@@ -30,21 +30,21 @@ html {
 header {
   border-bottom: 2px solid #D3D3D3;
   display: flex;
+  flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  gap: 5em;
+  gap: 10%;
 }
 
 header p {
   margin: 0;
   padding: 0;
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-weight: bold;
 }
 
 header p a {
   text-decoration: none;
-  margin-left: 0.5em;
   padding: 0em 0.2em;
 }
 
@@ -91,4 +91,14 @@ h2 {
 footer {
   border-top: 2px solid #D3D3D3;
   font-size: 0.7em;
+}
+
+/* --- narrow layout adjustments --- */
+@media screen and (max-width: 450px) {
+  .portrait {
+      float: none;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+  }
 }
